addToGroup endpoint defined
added a new file called fieldChecker.go

Documentation Updated
