# service/api/utils/fieldCheckers.go
@@ -1,0 +1,13 @@
+package utils
+
+import (
+	"github.com/google/uuid"
+)
+
+func CheckIdentifier(identifier string) bool {
+	_, err := uuid.Parse(identifier)
+	if err != nil {
+		return false
+	}
+	return true
+}
